Ok this should work for the people in dark mode. Although it does change motion which is annoying I think it should be fine. Should I stop yapping? I probably should. I'm so hungry i could eat my shi

--- a/src/css/colors.css
+++ b/src/css/colors.css
@@ -21,9 +21,9 @@ $motion-transparent: hsla(194, 100%, 50%, 0.35); /* 35% transparent version of m
 $motion-light-transparent: hsla(203, 100%, 39%, 0.15); /* 15% transparent version of motion-primary */
 
 /* opt-in theme overrides */
-$motion-primary-dark: #009CCC; /*top bar color when in dark mode*/
-$ui-primary-light: hsla(39.9, 88.94%, 46.08%, 1);
-$ui-secondary-light: hsla(35.9, 84.94%, 42.08%, 1);
+$motion-primary-dark: #DE980D; /*top bar color when in dark mode*/
+$ui-primary-light: hsla(215, 100%, 95%, 1);
+$ui-secondary-light: hsla(215, 75%, 95%, 1);
 $ui-tertiary-light: hsla(215, 50%, 90%, 1);
 $text-primary-light: hsla(225, 15%, 40%, 1);
 
